<resources>
    <string name="app_name">GritFit Fitness Studio</string>
    <string name="app_heading">GritFit Fitness</string>
    <string name="title">GritFit</string>
    <string name="studio">Studio</string>
    <string name="Login">Login</string>
    <string name="Enter_username">Enter Username</string>
    <string name="Enter_password">Enter Password</string>
    <string name="login_btn">log in</string>
    <string name="forget_password">I forget my password</string>
    <string name="register">Register</string>
    <string name="credit">Powered by Cool kids Studio</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="workout">Workout</string>
    <string name="stats">Stats</string>
    <string name="account">Account</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="userName">Username</string>
    <string name="day_and_date">Day, date month</string>
    <string name="welcome_to_gritFit">Welcome to GritFit</string>
    <string name="gender">What is your gender ?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="whats_your_name">What is your name?</string>
    <string name="name">First name</string>
    <string name="btn_continue">Continue</string>
    <string name="free_gift">This card contains a FREE gift!</string>
    <string name="avail">Tap to avail</string>
    <string name="health_overview">   Health overview   </string>
    <string name="connect_watch">Connect your watch now!</string>
    <string name="heart_rate">Heart rate </string>
    <string name="sleep">Sleep</string>
    <string name="stress">Stress</string>
    <string name="body_temp">Body temperature</string>
    <string name="distance">Distance</string>
    <string name="steps">Steps</string>
    <string name="recent_workout">Recent Workouts</string>
    <string name="loading">Loading...</string>
    <string name="feedPost">Post</string>
    <string name="likes">likes</string>
    <string name="comments">comments</string>
    <string name="caption">caption</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">notification</string>
    <string name="add">add</string>
    <string name="create_new_post">Create new post</string>
    <string name="what_s_in_your_mind">what\'s in your mind</string>
    <string name="post">Post</string>
    <string name="register_here">Register here:</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="push_workout">Push Workout</string>
    <string name="pull_workout">Pull Workout</string>
    <string name="leg_workout">Leg Workout</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_user">Already a user?</string>
    <string name="show_password">Show Password</string>
    <string name="create_profile">Create profile</string>
    <string name="name1">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="gender1">Gender</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="fitness_weight_loss_weight_gain_muscle_gain">Fitness / Weight loss / weight gain / muscle gain</string>
    <string name="fitness_goal">Fitness Goal</string>
    <string name="john_smith">John Smith</string>
    <string name="male_female">Male / Female</string>
    <string name="_48kg">48kg</string>
    <string name="post_and_progress">Post and Progress</string>
</resources>
