<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        />
    <item
        android:id="@+id/nav_community"
        android:title="@string/community"
        android:icon="@drawable/icon_community"
        />
    <item
        android:id="@+id/nav_workout"
        android:title="@string/workout"
        android:icon="@drawable/icon_stats"
        />
    <item
        android:id="@+id/nav_chat"
        android:title="@string/chat"
        android:icon="@drawable/icon_chat"
        />
    <item
        android:id="@+id/nav_account"
        android:title="@string/account"
        android:icon="@drawable/icon_account"
        />


</menu>