<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_notification"
        android:title="@string/notification"
        android:icon="@drawable/icon_notification"
       app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/nav_stats"
        android:title="@string/chat"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/nav_workout"
        android:title="@string/chat"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/nav_signOut"
        android:title="@string/chat"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never"
        />


</menu>