<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <!--    Container   -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        tools:context=".MainActivity">

        <!--        GritFit logo   -->

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <!--        login text   -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:text="@string/create_account"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <!--        for Email   -->

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/custom_email_input"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_input"
            android:layout_margin="5dp"
            android:textColorHint="@color/light_black"/>


        <!--        for password   -->

        <EditText
            android:id="@+id/register_pass_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Enter_password"
            android:textColor="@color/black"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/custom_pass_input"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_input"
            android:layout_margin="5dp"
            android:textColorHint="@color/light_black"/>

        <EditText
            android:id="@+id/register_confirm_pass_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/custom_pass_input"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/custom_input"
            android:layout_margin="5dp"
            android:textColorHint="@color/light_black"/>

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/show_password"
            android:buttonTint="@color/black"
            android:textColor="@color/black"
            android:layout_gravity="end" />


        <!--        login button   -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_margin="5dp"
            android:id="@+id/register_btn"
            android:textSize="25sp"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_register"
            android:indeterminateTint="@color/black"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="invisible"/>



        <!--        already a user  -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/already_a_user"
            android:textColor="@color/light_black"
            android:layout_marginTop="45dp"/>



        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>