<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

<!--   container   -->
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="50dp"
        android:orientation="vertical">

<!--        welcome message   -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_gritFit"
        android:textColor="@color/light_white"
        android:textSize="25sp"
        android:textStyle="bold"
        />

<!--        ask for gender   -->

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

<!--    card view for Female-->

    <androidx.cardview.widget.CardView
        android:id="@+id/female"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:elevation="15dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#8A472121">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_female"
            android:contentDescription="@string/female"
            android:layout_gravity="end"/>

    </androidx.cardview.widget.CardView>


<!--    card view for Male-->
    <androidx.cardview.widget.CardView
        android:id="@+id/male"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:elevation="15dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#8A472121">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_male"
            android:contentDescription="@string/male"
            android:layout_gravity="end"/>

    </androidx.cardview.widget.CardView>

<!--    card view for prefer not to say -->

    <androidx.cardview.widget.CardView
        android:id="@+id/notToSay"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        android:elevation="15dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#8A472121">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer_not_to_say"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"/>

    </androidx.cardview.widget.CardView>

<!--  text view to go to login activity  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/already_have_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"/>

<!--        button to go to login screen   -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="50dp"
        />

    </LinearLayout>
</ScrollView>