<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
z
<!--    card view for each post   -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true">


<!--        container   -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="11dp">

<!--            container for profile pic, name, username   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/row">

<!--                for profile pic   -->

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/profile"
                    />

<!--                container for name and username  -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:orientation="vertical">

<!--                    for name of the user   -->

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

<!--                    for username   -->
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/userName"
                        android:textColor="@color/light_black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

<!--            for captions  -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/caption"
                android:text="@string/caption"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/black" />

<!--            for images to be posted   -->

            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/uploadedPic"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:src="@drawable/post_feed"
                android:contentDescription="@string/feedPost" />

<!--            container for likes and comments   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

<!--                for likes   -->

                <ImageView
                    android:id="@+id/imgLikes"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_heart"
                    android:contentDescription="@string/likes"
                    />


<!--                for comments   -->
                <ImageView
                    android:id="@+id/imgComments"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_comment"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/comments"
                    />
            </LinearLayout>

<!--            to show number of likes   -->
            <TextView
                android:id="@+id/likeCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

<!--            to show no of comments   -->
            <TextView
                android:id="@+id/commentCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/comments"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>